--- a/CSS/index.css
+++ b/CSS/index.css
@@ -41,19 +41,22 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
+  display: block;
+  max-width: 0px;
+  overflow: hidden;
   position: fixed;
   top: 75px;
   left: 0;
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
-  background-color: #81C784;
-  border: 1px solid #004D40;
+  background-color: #81c784;
+  border: 1px solid #004d40;
   border-left: none;
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
+  transition: all 0.25s ease-in-out;
 }
 .menu ul li {
   list-style-type: none;
@@ -62,7 +65,8 @@
   text-align: center;
 }
 .menu--open {
-  display: block;
+  max-width: 351px;
+  transition: all 0.25s ease-in-out;
 }
 .articles {
   margin-top: 95px;
