--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -5,20 +5,23 @@
 }
 
 .menu {
-  display: none;
+  display: block;
+  max-width: 0px;
+  overflow: hidden;
   position: fixed;
   top: 75px;
   left: 0;
   width: 350px;
   height: 100vh; /* This give the height 100% of the screen or, '100% of View Height' */
-  background-color: #81C784;
-  border: 1px solid #004D40;
+  background-color: #81c784;
+  border: 1px solid #004d40;
   border-left: none;
   border-bottom: none;
   z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
+  transition: all 0.25s ease-in-out;
 }
 
-.menu ul li{
+.menu ul li {
   list-style-type: none;
   font-size: 32px;
   padding: 30px 0;
@@ -26,5 +29,6 @@
 }
 
 .menu--open {
-  display: block;
+  max-width: 351px;
+  transition: all 0.25s ease-in-out;
 }
