--- a/CSS/index.css
+++ b/CSS/index.css
@@ -78,9 +78,10 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 50px;
+  max-height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
+  transition: all 0.35s ease-in-out;
 }
 .article h2 {
   font-size: 28px;
@@ -107,7 +108,8 @@
   background-color: white;
 }
 .article-open {
-  height: 400px;
+  max-height: 400px;
+  transition: all 0.35s ease-in-out;
 }
 html,
 body {
